fix(letter): prevent text overflow

--- a/src/app/(main)/(core)/letters/[letterId]/letter.module.css
+++ b/src/app/(main)/(core)/letters/[letterId]/letter.module.css
@@ -35,7 +35,6 @@
   display: block;
   min-width: 0;
   flex: 1;
-  overflow-wrap: anywhere;
   word-break: break-word;
 }
 
